[tool.poetry]
name = "project-to-markdown"
version = "0.1.0"
description = ""
authors = ["James Ward <james@notjam.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.12.0"
PyGithub = "^1.47"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
project-to-markdown = "project_to_markdown:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

